update api/tests.py and requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
 asgiref==3.5.2
+attrs==22.1.0
+colorama==0.4.6
 Django==4.1.2
 django-debug-toolbar==3.7.0
 django-environ==0.9.0
 djangorestframework==3.14.0
+exceptiongroup==1.0.0rc9
+iniconfig==1.1.1
+packaging==21.3
+pluggy==1.0.0
 psycopg2==2.9.4
+pyparsing==3.0.9
+pytest==7.2.0
+pytest-django==4.5.2
 pytz==2022.4
 sqlparse==0.4.3
+tomli==2.0.1
 tzdata==2022.5
